service-mesh/manifests/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: istio-demo
  labels:
    name: istio-demo
---
