service-mesh/manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-prod
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        version: prod
    spec:
      containers:
      - name: frontend
        image: reselbob/istiocode:v0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-prod
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: business
        version: prod
    spec:
      containers:
      - name: business
        image: reselbob/istiocode:v0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
