service-mesh/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 3000
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: business
  labels:
    app: business
spec:
  selector:
    app: business
  ports:
  - port: 80
    targetPort: 3000
    name: http
